# chatbot_agent

./: .env  .gitignore  API_GUIDE.md  AUTHENTICATION.md  Dockerfile  JWT_AUTHENTICATION.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements_summarizer.txt  run.bat  run.sh  run_backend.py  setup.bat  start_backend.bat  test.py
.cursor/rules/: fastapi-framework.mdc  python-dependency-management-with-poetry.mdc  python-general-best-practices.mdc
data/: Chatbot 2025_vi_Evaluation of several Large Language Models in a chatbot for querying exam scores ver8 15082025.txt  Quy định làm việc đối với giảng viên HVKTMM_Ver10.6.txt  Quyết định 119.HVM-ĐT.txt  đề cương ktpm.txt
data/phongdaotao/daihoc/: qdhv-2025-284-quy-che-dao-tao.docx  qdhv-2025-284-quy-che-dao-tao.txt
data/phongdaotao/giangvien/: Quy định làm việc đối với giảng viên HVKTMM_Ver10.6.txt  QĐ thỉnh giảnh (bản phát hành).txt
data/phongdaotao/thacsi/: Quy định thực hiện đề án TN thạc sĩ (phát hành).docx  Quy định thực hiện đề án TN thạc sĩ (phát hành).txt
data/vanphong/: Du thao QC lam viec cua HV KTMM (2025).docx  Du thao QC lam viec cua HV KTMM (2025).txt
mermaid/: rag_mermaid.mmd  react_mermaid.mmd
nginx/: nginx.conf
src/: README.md  __init__.py  evaluate_chatbot.py  evaluation_result.csv  main.py  test_all.py  test_dataset.csv
src/agent/: README.md  __init__.py  agent.py  chat.py  demo.py  example_conversation.py  graph.py  llm_config.py  main.py  reactgraph.py  regulation.txt  state.py  streamlit_app.py  supervisor_agent.py  test_agent.py  test_integrated_agent.py
src/agent/prompts/: react_prompt.txt  rewrite.txt  system_prompt.txt
src/agent/vector_db/: index.pkl
src/api/: README.md  __init__.py  agent_api.py
src/app/: __init__.py  db.py  main.py
src/app/middleware/: __init__.py  logging_middleware.py
src/app/models/: __init__.py  conversation.py  message.py  user.py
src/app/routers/: __init__.py  chat.py  conversations.py  messages.py  users.py
src/app/services/: __init__.py  chatbot.py
src/app/utils/: __init__.py  log_config.py  logger.py
src/backend/: Dockerfile  main.py  setup_rate_limit.txt
src/backend/api/: __init__.py  admin_rag.py  auth.py  chat.py  file.py  models.py  rate_limit.py  user.py
src/backend/auth/: __init__.py  dependencies.py  jwt.py
src/backend/db/: mongodb.py
src/backend/models/: chat.py  rate_limit.py  responses.py  user.py
src/llm/: HFChatModel.py  __init__.py  config.py  llm_factory.py  model_manager.py
src/rag/: .gitignore  __init__.py  graph.py  llm_config.py  rag_graph.py  retriever.py  simple_chat_agent.py  streamlit_app.py  test_rag_tool.py  test_simple.py  text_summarizer.py  tool.py
src/rag/prompts/: detailed_generate.txt  generate.txt  grade.txt  rewrite.txt
src/score/: README.md  __init__.py  calculate_gpa_from_db.py  calculator.py  calculator_tool.py  database.py  models.py  score_tool.py  student_tool.py  test_score_tool.py
src/streamlit_ui/: Dockerfile  appbar.py  auth.py  feature_selector.py  file_upload_handler.py  file_utils.py  streamlit_app.py
src/ui/: README.md  __init__.py  streamlit_app.py
vector_db/: index.faiss  index.pkl
